--- a/Views/Vehicles/Index.cshtml
+++ b/Views/Vehicles/Index.cshtml
@@ -46,7 +46,7 @@
 <p>
     <a class="btn btn-primary" asp-action="Create">Add A Vehicle</a>
 </p>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search By Keyword/Numeric Value...">
+<input type="text" id="myInput" onkeyup="searchFunction()" placeholder="Search By Keyword/Numeric Value...">
 <br />
 <table id="myTable" class="table" style="background-color:white;">
     <thead>
@@ -102,7 +102,7 @@
 </table>
 
 <script>
-        function myFunction() {
+    function searchFunction() {
             $("#myInput").keyup(function () {
                 var value = this.value.toLowerCase().trim();
 
