--- a/Views/WayBills/Index.cshtml
+++ b/Views/WayBills/Index.cshtml
@@ -71,7 +71,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Vehicles.vehicleName)
+                @Html.DisplayFor(modelItem => item.Vehicles.vehicleRegistration)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.wayBillReference)
