--- a/Views/WayBills/Index.cshtml
+++ b/Views/WayBills/Index.cshtml
@@ -13,7 +13,7 @@
     }
 
     #myInput {
-        background-image: url('/css/searchicon.png');
+        background-image: url('../../Images/s1.png');
         background-position: 10px 10px;
         background-repeat: no-repeat;
         width: 100%;
