--- a/Views/Branches/Create.cshtml
+++ b/Views/Branches/Create.cshtml
@@ -7,24 +7,28 @@
 
 <center><h1>Add A New Branch</h1></center>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="branchName" class="control-label"></label>
-                <input asp-for="branchName" class="form-control" />
-                <span asp-validation-for="branchName" class="text-danger"></span>
+<div class="card">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="branchName" class="control-label"></label>
+                        <input asp-for="branchName" class="form-control" />
+                        <span asp-validation-for="branchName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="location" class="control-label"></label>
+                        <input asp-for="location" class="form-control" />
+                        <span asp-validation-for="location" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Add A Branch" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="location" class="control-label"></label>
-                <input asp-for="location" class="form-control" />
-                <span asp-validation-for="location" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Add A Branch" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
