--- a/Views/Branches/Edit.cshtml
+++ b/Views/Branches/Edit.cshtml
@@ -10,31 +10,37 @@
 </style>
 <center><h1>Update Branch Details</h1></center>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="BranchId" />
-            <div class="form-group">
-                <label asp-for="branchName" class="control-label"></label>
-                <input asp-for="branchName" class="form-control" />
-                <span asp-validation-for="branchName" class="text-danger"></span>
+<div class="card">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="BranchId" />
+                    <div class="form-group">
+                        <label asp-for="branchName" class="control-label"></label>
+                        <input asp-for="branchName" class="form-control" />
+                        <span asp-validation-for="branchName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="location" class="control-label"></label>
+                        <input asp-for="location" class="form-control" />
+                        <span asp-validation-for="location" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                    <br />
+                    <div>
+                        <a class="btn btn-info" asp-action="Index">All Branches</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="location" class="control-label"></label>
-                <input asp-for="location" class="form-control" />
-                <span asp-validation-for="location" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a class="btn btn-info"asp-action="Index">All Branches</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
