--- a/Views/Vehicles/Delete.cshtml
+++ b/Views/Vehicles/Delete.cshtml
@@ -12,42 +12,46 @@
 <center><h3>Are you sure you want to delete this vehicle ?</h3></center>
 <div>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vehicleName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vehicleName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vehicleRegistration)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vehicleRegistration)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vehicleType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vehicleType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.vehicleModel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.vehicleModel)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Branch)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Branch.branchName)
-        </dd class>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="VehicleId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a class="btn btn-info"asp-action="Index">All Vehicles</a>
-    </form>
+    <div class="card">
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.vehicleName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.vehicleName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.vehicleRegistration)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.vehicleRegistration)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.vehicleType)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.vehicleType)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.vehicleModel)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.vehicleModel)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Branch)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Branch.branchName)
+                </dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="VehicleId" />
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                <a class="btn btn-info" asp-action="Index">All Vehicles</a>
+            </form>
+        </div>
+    </div>
 </div>
