--- a/Views/Vehicles/Edit.cshtml
+++ b/Views/Vehicles/Edit.cshtml
@@ -10,46 +10,52 @@
 </style>
 <center><h1>Update Vehicle Information</h1></center>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="VehicleId" />
-            <div class="form-group">
-                <label asp-for="vehicleName" class="control-label"></label>
-                <input asp-for="vehicleName" class="form-control" />
-                <span asp-validation-for="vehicleName" class="text-danger"></span>
+<div class="card">
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-4">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="VehicleId" />
+                    <div class="form-group">
+                        <label asp-for="vehicleName" class="control-label"></label>
+                        <input asp-for="vehicleName" class="form-control" />
+                        <span asp-validation-for="vehicleName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="vehicleRegistration" class="control-label"></label>
+                        <input asp-for="vehicleRegistration" class="form-control" />
+                        <span asp-validation-for="vehicleRegistration" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="vehicleType" class="control-label"></label>
+                        <input asp-for="vehicleType" class="form-control" />
+                        <span asp-validation-for="vehicleType" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="vehicleModel" class="control-label"></label>
+                        <input asp-for="vehicleModel" class="form-control" />
+                        <span asp-validation-for="vehicleModel" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="BranchId" class="control-label"></label>
+                        <select asp-for="BranchId" class="form-control" asp-items="ViewBag.BranchId"></select>
+                        <span asp-validation-for="BranchId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                    <br />
+                    <div>
+                        <a class="btn btn-info" asp-action="Index">All Vehicles</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="vehicleRegistration" class="control-label"></label>
-                <input asp-for="vehicleRegistration" class="form-control" />
-                <span asp-validation-for="vehicleRegistration" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="vehicleType" class="control-label"></label>
-                <input asp-for="vehicleType" class="form-control" />
-                <span asp-validation-for="vehicleType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="vehicleModel" class="control-label"></label>
-                <input asp-for="vehicleModel" class="form-control" />
-                <span asp-validation-for="vehicleModel" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="BranchId" class="control-label"></label>
-                <select asp-for="BranchId" class="form-control" asp-items="ViewBag.BranchId"></select>
-                <span asp-validation-for="BranchId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a class="btn btn-info" asp-action="Index">All Vehicles</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
